--- a/index.html
+++ b/index.html
@@ -3,56 +3,63 @@
 <head>
     <style>
         .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: start;
-            width: 250px;
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            grid-gap: 5px;
         }
+
         .square {
-            width: 40px;
-            height: 40px;
+            box-sizing: border-box;
+            width: 100%;
+            height: 100%;
+            padding: 12.5%;
+            font-size: calc(1/8 * 100vw);
             background-color: black;
-            margin: 5px;
+            color: white;
+            text-align: center;
+            border: none;
+            outline: none;
         }
+
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
 
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
 
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
 
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
 
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
 
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
+        <input type="text" class="square" maxlength="1">
     </div>
 </body>
 </html>
