got rid of the blue highlight

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 for(let square of grid_objects){
                     square.style.borderColor = get_css_color_var("--square-border-grey");
                 }
-                get_curr_square().style.borderColor = "blue";
+                // get_curr_square().style.borderColor = "blue";
             }
 
             function add_to_index(amt){
