making sure the master branch is now being used by netlify

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </head>
     <body>
 
-        <!-- <p id="index-marker" style="font-size: 20px;">index: 0</p> -->
+        <p>Super secret message (mom ignore): master branch</p>
 
         <div id="grid-container"></div>
 
