--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
             // window.onload = () => { alert('Page refreshed at ' + new Date().toLocaleTimeString()); };
             window.onload = () => { window.scrollTo(0, 0) };
 
+            // useless comment.
+
             // Generate the grid squares
             const gridContainer = getElemById('grid-container');
             for (let i = 0; i < 30; i++) {
